# apexshot

./: .clang-format  .editorconfig  .env.example  .gitignore  AGENT.md  AGENTS.md  ANNOUNCEMENTS.md  ApexShot Landing Page Design Document (1).md  CAPTURE_INVESTIGATION.md  CAPTURE_QUICK_REFERENCE.txt  CLICK_KEYSTROKE_REMOVAL_IMPLEMENTATION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Plan_v1___Plan_Recording_UI  README.md  RECORDING_UI_PLAN.md  Review___Update_Outdated_Tests  Review___Verify_Fixed_Issues  Review___Verify_Fixed_Issues2.md  SECURITY.md  VIDEO_TAB_IMPLEMENTATION_SUMMARY.md  build.rs  io.github.codegoddy.apexshot.desktop  io.github.codegoddy.cleanshitx.desktop  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repo.md  rustfmt.toml  setup-frontend.sh  test_img.rs
.antigravitycli/: 4baf295e-a673-4cbd-9b16-95e66c77e272.json  c3b56a3c-9c91-408b-a160-035c99569f57.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: discord-release-webhook.yml  release.yml
backend/: .gitignore  Cargo.toml  build.rs  io.github.codegoddy.apexshot.desktop
backend/capture-overlay/src/: CaptureOverlay.h  ScreenCapture.cpp  ScreenCapture.h  WindowPickerOverlay.h  main.cpp  request.h
backend/docs/: Data_Flow.md  Linux_Interactions.md
backend/src/: capture_overlay.rs  config.rs  main.rs  overlay.rs
backend/src/backend/: mod.rs
backend/src/capture/: editor.rs  preview_overlay.rs
backend/src/capture/editor/: color.rs  render.rs  state.rs  types.rs  ui_support.rs  window-refactor-plan.md  window.rs
backend/src/capture/editor/window/: background_panel.rs  color_picker.rs  cursor.rs  events.rs  mod.rs  toolbar.rs
backend/src/daemon/: mod.rs
backend/src/hotkeys/: mod.rs
backend/src/ocr/: mod.rs
backend/src/recording/: mod.rs  stop_overlay.rs
backend/src/settings/: actions.rs  general.rs  mod.rs
backend/src/tray/: mod.rs
backend/tests/: x11_backend_test.rs
backend/web-scroll-extension/: README.md  background.js  manifest.json
capture-overlay/: .gitignore  CMakeLists.txt
capture-overlay/src/: CaptureOverlay.cpp  CaptureOverlay.h  CaptureOverlay_Drawing.cpp  CaptureOverlay_Events.cpp  CaptureOverlay_HitTest.cpp  CaptureOverlay_Scroll.cpp  CaptureOverlay_Webcam.cpp  CaptureOverlay_Window.cpp  CaptureOverlay_p.h  MonitorPicker.cpp  MonitorPicker.h  RecordingControlsWindow.cpp  RecordingControlsWindow.h  ScreenCapture.cpp  ScreenCapture.h  ScrollControlPanel.cpp  ScrollControlPanel.h  WindowPickerOverlay.cpp  WindowPickerOverlay.h  main.cpp  request.cpp
data/icons/: README.md
docs/: ANNOTATION_EXECUTIVE_SUMMARY.md  ANNOTATION_IMPLEMENTATION_GUIDE.md  ANNOTATION_STORAGE_COMPARISON.md  ANNOTATION_STORAGE_RESEARCH.md  ARCHITECTURE.md  ARCH_SUPPORT.md  AUR_PUBLISHING.md  Architecture.md  DEVELOPER_GUIDE.md  ISSUE_32_33_HANDOFF.md  Implementation_Details.md  MODULES.md  plan-kde-native-screenshot-backend.md  plan-obs-features.md  plan-pipewire-native-recording.md  plan-xbackbone-upload.md  progress-2026-03-24.md  progress-fedora-kde-overlay-and-preview.md  system-audio-monitor-plan.md
docs/plans/: 2026-03-20-number-tool-enhancement-design.md  2026-03-31-quick-access-overlay-settings.md  2026-04-12-cloud-upload-design.md
examples/: rust_overlay_preview.rs
frontend/: .npmrc  AGENT.md  README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/.next/: BUILD_ID  build-manifest.json  export-detail.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: navigation.tsx
frontend/inngest/: client.ts  fnA.ts
gnome-extension/: README.md  SUBMISSION_GUIDE.md  click-display.js  controls-ui-layout.js  controls-ui.js  extension.js  gnome-version.js  keystroke-display.js  mask-ui.js  metadata.json  runtime-overlays-visibility.js  runtime-overlays.js  screenshot-lock.js  session-state.js  window-list.js
gnome-extension/screenshots/: README.md
gnome-extension/tests/: click-display.test.js  controls-ui-layout.test.js  keystroke-display.test.js  runtime-overlays.test.js  screenshot-lock.test.js  session-state-keystrokes.test.js  session-state-runtime-support.test.js  window-list.test.js
native-host/: apexshot-native-host  cleanshitx-native-host  io.github.codegoddy.apexshot.json  io.github.codegoddy.cleanshitx.json
packaging/: apexshot-daemon.desktop  apexshot.desktop
packaging/arch/: .INSTALL  .SRCINFO  PKGBUILD  apexshot.install
packaging/deb/: apexshot-capture  apexshot-native-host
packaging/debian/: postinst  prerm
packaging/fedora/: apexshot.spec
packaging/opensuse/: apexshot.spec
scripts/: arch-install.sh  arch-update.sh  aur-prepare.sh  build-fedora-rpm.sh  build-opensuse-rpm.sh  fedora-install.sh  fedora-reinstall.sh  fedora-update.sh  install-arch.sh  install.sh  opensuse-install.sh  opensuse-update.sh  test.sh  ubuntu-install.sh  ubuntu-update.sh  update.sh  workarea-info.py
src/: app_identity.rs  capture_overlay.rs  config.rs  gnome_shell.rs  lib.rs  main.rs  overlay.rs  pipewire_engine.rs  preview_launch.rs  usage_telemetry.rs
src/annotations/: mod.rs  schema.rs  storage.rs
src/backend/: kde_screencast.rs  kde_screenshot.rs  mod.rs  portal_permissions.rs  screencopy.rs  wayland.rs  x11.rs
src/capture/: editor.rs  mod.rs  preview_overlay.rs
src/cloud/: apexshot.rs  auth.rs  destination.rs  mod.rs  upload.rs  xbackbone.rs
src/compositor/: cosmic.rs  hyprland.rs  mod.rs  niri.rs  river.rs  sway.rs
src/daemon/: mod.rs
src/distro/: mod.rs
src/gnome_integration/: mod.rs
src/hotkeys/: mod.rs
src/ocr/: deskew.rs  mod.rs  ocrs_engine.rs
test_gtk/: Cargo.toml
tests/: desktop_identity.rs  package_metadata.rs  test_dimensions.rs  test_layer.rs  wayland_backend_test.rs  window_picker_ui_contract.rs  x11_backend_test.rs  xbackbone_e2e.rs  xbackbone_upload.rs
web-scroll-extension/: README.md  STORE_LISTING.md  background.js  manifest.json  popup.html  popup.js
(+223 files in other folders)
