[package]
name = "apexshot"
version = "0.2.23"
edition = "2021"
description = "Screenshot and screen recording tool for Linux"
license = "GPL-3.0"
authors = ["codegoddy <codegoddy@gmail.com>"]
repository = "https://github.com/apex-shot/apexshot"

[dependencies]
# display server
x11rb = { version = "0.13.2", features = ["all-extensions"] }
zbus = "5.11.0"  # for dbus/portal communication
tokio = { version = "1.47.1", features = ["full"] }
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
url = "2.5"
reis = { version = "0.6.1", features = ["tokio"] }
xkbcommon = "0.9.0"

# GUI overlay for area selection (X11)
gtk4 = "0.10"
gdk4x11 = { package = "gdk4-x11", version = "0.10" }
gtk4-layer-shell = "0.7.1"

# error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# utils
dirs = "6.0.0"   # xdg dirs support
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
base64 = "0.22.1"
tracing = "0.1.41"
futures-util = "0.3.31"
async-trait = "0.1.89"
image = { version = "0.24.9", features = ["png", "jpeg", "gif", "webp"] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# OCR
tesseract = "0.15"
ocrs = "0.12"
rten = "0.24"
rten-tensor = "0.24"
rten-imageproc = "0.24"
arboard = { version = "3.6", features = ["wayland-data-control"] }

# QR code detection
rqrr = "0.9"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
pipewire = "0.9"
relm4-icons = "0.10.1"
wayland-client = "0.31.12"
wayland-protocols = "0.32.10"
wayland-protocols-wlr = "0.3.10"
libc = "0.2.182"
ksni = "0.2"

[dev-dependencies]
pretty_assertions = "1.4.1"  # better test output
test-case = "3.3.1"         # parameterized tests
mockall = "0.13.1"          # mocking framework

[build-dependencies]
relm4-icons-build = "0.10.1"

[package.metadata.deb]
maintainer = "codegoddy <codegoddy@gmail.com>"
copyright = "2026, codegoddy"
license-file = ["LICENSE", "4"]
depends = "$auto"
recommends = "gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/apexshot", "usr/bin/", "755"],
    ["packaging/deb/apexshot-capture", "usr/bin/", "755"],
    ["packaging/deb/apexshot-native-host", "usr/bin/", "755"],
    ["packaging/apexshot.desktop", "usr/share/applications/io.github.codegoddy.apexshot.desktop", "644"],
    ["packaging/apexshot-daemon.desktop", "etc/xdg/autostart/apexshot.desktop", "644"],
    ["packaging/apexshot.svg", "usr/share/icons/hicolor/scalable/apps/apexshot.svg", "644"],
    ["packaging/apexshot.svg", "usr/share/icons/hicolor/scalable/apps/io.github.codegoddy.apexshot.svg", "644"],
    ["native-host/io.github.codegoddy.apexshot.json", "etc/opt/chrome/NativeMessagingHosts/", "644"],
    ["native-host/io.github.codegoddy.apexshot.json", "etc/chromium/NativeMessagingHosts/", "644"],
]
maintainer-scripts = "packaging/debian"
