[package]
name = "apexshot"
version = "0.2.29"
edition = "2021"
description = "Open-source Linux screenshot, annotation, and screen recording tool with OCR, QR detection, and ShareX-style workflows"
license = "GPL-3.0"
authors = ["codegoddy <codegoddy@gmail.com>"]
repository = "https://github.com/apex-shot/apexshot"

[[bin]]
name = "apexshot"
path = "src/main.rs"

[[bin]]
name = "test_rust_crosshair"
path = "src/bin/test_rust_crosshair.rs"

[dependencies]
# display server
x11rb = { version = "0.13.2", features = ["all-extensions"] }
zbus = "5.11.0"  # for dbus/portal communication
tokio = { version = "1.47.1", features = ["full"] }
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
url = "2.5"

# GUI overlay for area selection (X11)
gtk4 = "0.10"
gdk4x11 = { package = "gdk4-x11", version = "0.10" }
gtk4-layer-shell = "0.7.1"

# error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# utils
dirs = "6.0.0"   # xdg dirs support
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_yml = "0.0.12"
base64 = "0.22.1"
tracing = "0.1.41"
futures-util = "0.3.31"
async-trait = "0.1.89"
image = { version = "0.24.9", features = ["png", "jpeg", "gif", "webp"] }
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# OCR
tesseract = "0.15"
ocrs = "0.12"
rten = "0.24"
rten-tensor = "0.24"
rten-imageproc = "0.24"
ureq = "2.10"
arboard = { version = "3.6", features = ["wayland-data-control"] }

# QR code detection
rqrr = "0.9"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
pipewire = "0.9"
libspa-sys = "0.9"
relm4-icons = "0.10.1"
wayland-client = "0.31.12"
wayland-protocols = "0.32.10"
wayland-protocols-wlr = "0.3.10"
libc = "0.2.182"
ksni = "0.2"

[dev-dependencies]
pretty_assertions = "1.4.1"  # better test output
test-case = "3.3.1"         # parameterized tests
mockall = "0.13.1"          # mocking framework
qrcode = "0.14.1"           # QR fixture generation for decoder tests

[profile.release]
strip = true
panic = "abort"

[build-dependencies]
relm4-icons-build = "0.10.1"

[package.metadata.deb]
maintainer = "codegoddy <codegoddy@gmail.com>"
copyright = "2026, codegoddy"
license-file = ["LICENSE", "4"]
# Runtime dependency policy.
#
# Hard `depends` entries are required for the *core* feature set to work
# on any modern Linux system (Wayland or X11, PipeWire or PulseAudio).
# Anything that is only needed for one specific stack is expressed as an
# apt alternative (`pkg-a | pkg-b`) so that whichever the user already
# runs satisfies the dependency. Stack-specific extras with no
# alternative go into `recommends` instead, so dpkg never refuses to
# install on a perfectly valid setup.
#
#   $auto                                      → shared libs of the Rust binary
#                                                (gtk4, gstreamer, pipewire, …)
#   wl-clipboard | xclip                       → clipboard copy: wl-clipboard on Wayland,
#                                                xclip on X11. Either satisfies.
#   pipewire-pulse | pulseaudio-utils          → provides `pactl` for audio source listing.
#                                                pipewire-pulse ships it on PipeWire systems;
#                                                pulseaudio-utils on legacy PulseAudio systems.
#   xdg-utils                                  → `xdg-open` (open file/URL)
#   libnotify-bin                              → desktop notifications via notify-send
#   ffmpeg                                     → GIF encoding & video post-processing
#   wget, curl, unzip                          → in-app GNOME extension installer
#   gstreamer1.0-{plugins-base,plugins-good,plugins-bad,libav,pipewire}
#                                              → ScreenCast / PipeWire capture + encoding
#   tesseract-ocr, tesseract-ocr-eng           → OCR (text extraction) – English by default
#   libqt5widgets5/dbus5/network5/x11extras5,
#   libxtst6                                   → run-time libs for the bundled
#                                                `apexshot-capture` C++ overlay
#                                                (cargo-deb's $auto cannot
#                                                introspect asset binaries, so
#                                                these MUST be listed manually)
depends = "$auto, wl-clipboard | xclip, pipewire-pulse | pulseaudio-utils, xdg-utils, libnotify-bin, ffmpeg, wget, curl, unzip, gstreamer1.0-plugins-base, gstreamer1.0-plugins-good, gstreamer1.0-plugins-bad, gstreamer1.0-libav, gstreamer1.0-pipewire, tesseract-ocr, tesseract-ocr-eng, libqt5widgets5, libqt5dbus5, libqt5network5, libqt5x11extras5, libxtst6"
# Recommended (not required) — optional capture paths, GNOME polish, and
# stack-specific helpers that we don't want to *force* onto users who
# don't need them:
#   xdg-desktop-portal-gnome | -gtk            → ScreenCast / Screenshot portal backend
#   grim                                       → fast wlroots screencopy fallback
#   pipewire                                   → PipeWire daemon (already on most modern installs)
#   gstreamer1.0-pulseaudio                    → only needed when recording via the legacy
#                                                PulseAudio sink; PipeWire users don't need it
#                                                and forcing it can pull in conflicting pulse stacks.
recommends = "xdg-desktop-portal-gnome | xdg-desktop-portal-gtk, grim, pipewire, gstreamer1.0-pulseaudio"
section = "graphics"
priority = "optional"
assets = [
    ["target/release/apexshot", "usr/bin/", "755"],
    ["packaging/deb/apexshot-capture", "usr/bin/", "755"],
    ["packaging/deb/apexshot-native-host", "usr/bin/", "755"],
    ["packaging/apexshot.desktop", "usr/share/applications/io.github.codegoddy.apexshot.desktop", "644"],
    ["packaging/apexshot-daemon.desktop", "etc/xdg/autostart/apexshot.desktop", "644"],
    ["packaging/apexshot.svg", "usr/share/icons/hicolor/scalable/apps/apexshot.svg", "644"],
    ["packaging/apexshot.svg", "usr/share/icons/hicolor/scalable/apps/io.github.codegoddy.apexshot.svg", "644"],
    ["packaging/apexshot.svg", "usr/share/pixmaps/apexshot.svg", "644"],
    ["src/capture/editor/background-images/gradient-01.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-02.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-03.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-04.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-05.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-06.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-07.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-08.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-09.jpg", "usr/share/apexshot/background-images/", "644"],
    ["src/capture/editor/background-images/gradient-10.jpg", "usr/share/apexshot/background-images/", "644"],
    ["assets/sounds/camera.ogg", "usr/share/apexshot/sounds/", "644"],
    ["assets/sounds/classic.ogg", "usr/share/apexshot/sounds/", "644"],
    ["assets/sounds/pop.ogg", "usr/share/apexshot/sounds/", "644"],
    ["native-host/io.github.codegoddy.apexshot.json", "etc/opt/chrome/NativeMessagingHosts/", "644"],
    ["native-host/io.github.codegoddy.apexshot.json", "etc/chromium/NativeMessagingHosts/", "644"],
]
maintainer-scripts = "packaging/debian"
